# mrAiNoises

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindArnold.cmake
src/: Simplex.h  mrAiCurlnoise.cpp  mrAiWorleynoise.cpp
ui/: mrAiCurlnoise.mtd  mrAiWorleynoise.mtd
